# Heddle

./: .editorconfig  .gitattributes  .gitignore  AbstractExtension.cs  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Heddle.sln  LICENSE  Local.testsettings  NOTICE  NuGet.Config  Package.nuspec  README.md  ReadMe.txt  SECURITY.md  THIRD-PARTY-NOTICES.md  TTLTemplate.cs  TemplateExtension.cs  Templates.csproj  Templating.sln  TraceAndTestImpact.testsettings  TtlLexer.tokens  TtlLexerNoWS.tokens  UpgradeLog.htm  app.config  azure-pipelines.yml  build.cmd  build.ps1  clean.cmd  develop.txt  global.json  qodana.yaml
benchmarks/rust/: .gitignore  Cargo.toml  heddle-reference.toml
benchmarks/rust/benches/: cold.rs  controlled.rs  idiomatic.rs
benchmarks/rust/data/composed-page/: area-1.html  area-2.html  area-3.html  comp-custom-styles.html  comp-head-scripts.html  section-social.html
benchmarks/rust/src/: corpus.rs  gates.rs  lib.rs  models.rs  normalize.rs  verifier.rs
benchmarks/rust/src/engines/: askama_controlled.rs  askama_idiomatic.rs  mod.rs  tera_controlled.rs  tera_idiomatic.rs
benchmarks/rust/templates/controlled/askama/: composed-page-layout.html  composed-page.html  encoded-loop.html  fragment-heavy.html  mixed-page.html
benchmarks/rust/templates/controlled/tera/: composed-page-layout.html  composed-page.html  conditional-heavy.html  fortunes-encoded.html  fragment-heavy-tile.html  fragment-heavy.html  large-loop.html  trivial-substitution.html
benchmarks/rust/templates/idiomatic/askama/: composed-page-base.html  (+10 more)
(+2662 files in other folders)
